<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/icon_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowDx="5"
        android:shadowRadius="5"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/company"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_edit"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_acc"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>
    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_edit"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_pwd"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>
    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_color"
        android:text="@string/login"
        android:textSize="@dimen/text_big"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/text_hint"
        android:textSize="@dimen/text_small"
        android:layout_gravity="end"
        android:text="@string/login_register"/>
</LinearLayout>