<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/register_acc"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_edit"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_acc"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>
    <EditText
        android:id="@+id/register_nick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_edit"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_nick"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>

    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_edit"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_pwd"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_edit"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_confirm"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>

    <Button
        android:id="@+id/register_register"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_color"
        android:text="@string/register"
        android:textSize="@dimen/text_big"
        android:textColor="@color/white"/>
</LinearLayout>