<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/mine_label"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_label"/>
    <TextView
        android:id="@+id/mine_version"
        android:layout_below="@+id/mine_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_big"
        android:textColor="@color/text_main"
        tools:text="这是我的"/>
    <TextView
        android:id="@+id/mine_build_manage"
        android:layout_below="@id/mine_version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/text_main"
        android:text="@string/mine_build_manage"
        android:background="@drawable/bg_item"
        android:drawableRight="@drawable/icon_more"
        android:drawableEnd="@drawable/icon_more"
        android:gravity="center_vertical"/>
    <TextView
        android:id="@+id/mine_build_account"
        android:layout_below="@id/mine_build_manage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/text_main"
        tools:text="@string/mine_build_account"
        android:background="@drawable/bg_item"
        android:gravity="center_vertical"/>
    <Button
        android:id="@+id/mine_logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textSize="@dimen/text_big"
        android:background="@drawable/bg_edit"
        android:textColor="@color/colorPrimary"
        android:text="@string/logout"/>
</RelativeLayout>