<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/pay_outside"
        android:layout_width="match_parent"
        android:background="@color/half_transparent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:id="@+id/pay_plat_zfb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_zfb"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_mid"
            android:text="@string/pay_zfb"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:id="@+id/pay_plat_wx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_wx"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_mid"
            android:text="@string/pay_wx"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>
    <TextView
        android:id="@+id/pay_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/colorPrimaryDark"/>
</LinearLayout>